--- a/Backend/mybank/src/main/resources/application.properties
+++ b/Backend/mybank/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/myBank
 spring.datasource.username=postgres
 spring.datasource.password=root
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
